components/microservice/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-service
  namespace: microservice
spec:
  selector:
    app: microservice
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
