components/microservice/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  namespace: microservice
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "http://dex.dex.svc.cluster.local:5001/token/verify"
spec:
  ingressClassName: nginx
  rules:
  - host: 192.168.214.20
    http:
      paths:
        - path: /microservice
          pathType: Prefix
          backend:
            service:
              name: microservice-service
              port:
                number: 8000
